(1)Fix the mobile responsive on iOS. (2)Make it colorful.

--- a/Affiliate/css/style.css
+++ b/Affiliate/css/style.css
@@ -70,6 +70,7 @@ body{
 	padding-left: 0px;
 }
 .left-tabpanel{
+	display: -webkit-flex;
 	display: flex;
 	margin-bottom: 100px; 
 }
@@ -131,7 +132,9 @@ body{
 	border-style: solid solid solid none;
 	border-width: 1px;
 	border-color: #ccc;
-	width: 100%
+	width: 100%;
+	margin-top: 1px;
+	border-radius: 0px 5px 5px 0px;
 }
 .right-tab-content > .tab-pane{
 	padding: 20px;
@@ -200,6 +203,7 @@ body{
 	font-size: 16px;
 }
 .banner-info{
+	display: -webkit-flex;
 	display: flex;
 	margin: 40px 20px 0px 10px;
 	border-bottom: 1px solid #ccc;
@@ -285,6 +289,7 @@ body{
 .form-btn-control{
 	display: -webkit-flex;
 	display: flex;
+	justify-content: -webkit-flex-end;
 	justify-content: flex-end;
 	margin: 0px 0px 0px 10px;
 }
@@ -295,14 +300,103 @@ body{
 	padding: 0px 0px 0px 10px;
 	margin-bottom: 0px;
 }
+.content h4{
+	margin: 15px 0px 5px 0px;
+}
+.content em{
+	font-weight: 600;
+	font-style: normal;
+}
 /*
 *============================== style color rewrite =====================
 */
-
-
-
+body{
+	background-color: #fff;
+}
+.navbar-default .navbar-brand{
+	color: #fff;
+}
+.navbar-default{
+	background-color: #52B9E9;
+}
+.navbar-default .navbar-nav > li > a {
+    color: #fff;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > p,
+.navbar-header .active{
+	color: #52B9E9;
+	background-color: #fff !important;
+}
+.navbar-default .navbar-brand:hover{
+	color: #fff !important;
+	background-color: #43C83C !important;
+	text-decoration: underline;
+}
+.btn-default {
+    color: #fff;
+    background-color: #1171A3;
+    border-color: #1E5D7F;
+}
+.btn.focus,.btn:focus,.btn:hover{
+	color: #fff;
+	background-color: #43C83C;
+	text-decoration: none;
+}
+.page-header{
+	border-bottom-color: #D9534F;
+}
+.page-footer {
+    background-color: #52B9E9 !important;
+}
+.page-footer .container {
+    background-color: #ddd !important;
+}
+.page-footer section label a{
+	color: #333 !important;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.right-tab-content .nav-tabs > li > a:hover{
+	color: #fff !important;
+	background-color: #43C83C;
+	text-decoration: underline;
+}
+.navbar-default .navbar-nav > .active > a:hover,
+.page-footer section label a:hover{
+	color: #43C83C !important;
+	text-decoration: underline;
+}
+.left-tabs > li > a:hover{
+	text-decoration: underline;
+	background-color: #43C83C;
+	color: #fff;
+}
+.left-tabs > li.active a{
+	background: none repeat scroll 0% 0% #FA3031 !important;
+	color: #fff !important;
+}
+.left-tabs > li.active > a,
+.left-tabs > li.active > a:focus,
+.left-tabs > li.active > a:hover{
+	box-shadow: -2px 2px 2px #333;
+	text-decoration: none;
+}
+.right-tab-content{
+	border-color: #fff #932AB6 #932AB6 #fff;
+	box-shadow: 3px 5px 5px -2px #333;
+}
+/*.tab-content.right-tab-content {
+    background-color: #FA3031;
+    color: #FFF !important;
+}
+.right-tab-content .nav-tabs > li > a {
+    color: #fff;
+}
+.right-tab-content .nav-tabs > li.active > a {
+    color: #337AB7;
+}*/
 /*
-*======================================================================
+*====================D9A1EB==================================================
 */
 /*====================== dynamic style by scrolling window ========*/
 .fixed-cbTab{
